# zzz-auto-daily-tool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
ZzzAutoDailyTool/: __main_.py  __main__.py  zzz_auto_daily_tool.py
ZzzAutoDailyTool/lib/: battery.py  control_game.py  logger.py  screen_rcg_and_click.py  screen_recog.py  start.py  tasks.py  util.py
config/: battery_usage_methods  battery_usage_methods.json  config.json  user_setting.json
